[gd_scene load_steps=26 format=2]

[ext_resource path="res://asset/character_right.png" type="Texture" id=1]
[ext_resource path="res://asset/character_left.png" type="Texture" id=2]
[ext_resource path="res://asset/gun.png" type="Texture" id=3]
[ext_resource path="res://Character.gd" type="Script" id=4]
[ext_resource path="res://asset/character_right_rush.png" type="Texture" id=5]
[ext_resource path="res://asset/character_left_rush.png" type="Texture" id=6]
[ext_resource path="res://asset/sword.png" type="Texture" id=7]
[ext_resource path="res://asset/particle.png" type="Texture" id=8]
[ext_resource path="res://asset/character_dead.png" type="Texture" id=9]
[ext_resource path="res://asset/bow_normal.png" type="Texture" id=10]
[ext_resource path="res://asset/bow_charge3.png" type="Texture" id=11]
[ext_resource path="res://asset/bow_charge2.png" type="Texture" id=12]
[ext_resource path="res://asset/bow_charge1.png" type="Texture" id=13]
[ext_resource path="res://asset/arrow.png" type="Texture" id=14]
[ext_resource path="res://asset/gun_shooting2.png" type="Texture" id=15]
[ext_resource path="res://asset/gun_shooting1.png" type="Texture" id=16]
[ext_resource path="res://asset/gun_shooting3.png" type="Texture" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.0722, 31.6918 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "right_rush",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "left_rush",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 31.6643, 31.9323 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "normal",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 15 ), ExtResource( 17 ) ],
"loop": true,
"name": "shooting",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "normal",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "charge3",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "charge2",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": false,
"name": "charge1",
"speed": 5.0
} ]

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 100, 60, 1 )
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = -100.5
angle_random = 0.49
color = Color( 0.321569, 0.294118, 0.937255, 1 )
hue_variation = -1.0
hue_variation_random = 0.02

[sub_resource type="Animation" id=7]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sword_swing:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[sub_resource type="Animation" id=8]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sword_swing:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[node name="Character" type="KinematicBody2D" groups=["character"]]
scale = Vector2( 0.5, 0.5 )
z_index = 1
collision_layer = 2
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = -64
limit_right = 1856
limit_bottom = 768

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "left"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.235962, 0.23597 )
shape = SubResource( 3 )

[node name="Gun" type="AnimatedSprite" parent="."]
position = Vector2( -35, 12 )
scale = Vector2( 1.5, 1.5 )
z_index = 1
frames = SubResource( 4 )
animation = "normal"
playing = true
offset = Vector2( -12, 0 )
flip_h = true

[node name="bullet_start_pos" type="Position2D" parent="Gun"]
position = Vector2( -40, -7 )

[node name="Sword" type="Sprite" parent="."]
position = Vector2( -41.4217, 136.308 )
texture = ExtResource( 7 )
offset = Vector2( -36, 0 )
flip_h = true

[node name="attack_start_pos" type="Position2D" parent="Sword"]
position = Vector2( -70, 0 )

[node name="particle_start_pos" type="Position2D" parent="Sword"]
position = Vector2( -50, 0 )

[node name="Sword_swing" type="Sprite" parent="."]
visible = false
position = Vector2( 25, 15 )
texture = ExtResource( 7 )
offset = Vector2( 36, 0 )

[node name="Bow" type="AnimatedSprite" parent="."]
position = Vector2( 30.8264, 104.662 )
frames = SubResource( 5 )
animation = "charge3"
flip_h = true

[node name="Arrow" type="Sprite" parent="Bow"]
texture = ExtResource( 14 )
flip_h = true

[node name="weapon_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="reload_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="rush_timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="rebound_timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="knockback_timer" type="Timer" parent="."]
wait_time = 0.3

[node name="sp_heal_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="sword_charge_timer" type="Timer" parent="."]
wait_time = 0.1

[node name="arrow_charge_timer" type="Timer" parent="."]
wait_time = 0.1

[node name="sword_charge_particle" type="Particles2D" parent="."]
position = Vector2( -100.692, 139.352 )
scale = Vector2( 0.3, 0.3 )
z_index = 2
emitting = false
speed_scale = 1.5
process_material = SubResource( 6 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/swing_left = SubResource( 7 )
anims/swing_right = SubResource( 8 )

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="weapon_timer" to="." method="_on_weapon_timer_timeout"]
[connection signal="timeout" from="rebound_timer" to="." method="_on_rebound_timer_timeout"]
[connection signal="timeout" from="knockback_timer" to="." method="_on_knockback_timer_timeout"]
[connection signal="timeout" from="sword_charge_timer" to="." method="_on_sword_charge_timer_timeout"]
[connection signal="timeout" from="arrow_charge_timer" to="." method="_on_arrow_charge_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
